--- a/style.css
+++ b/style.css
@@ -4,7 +4,55 @@
     box-sizing: border-box;
 }
 
-body{max-width:650px;margin:40px auto;padding:0 10px;font:18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";color:#444}h1,h2,h3{line-height:1.2}@media (prefers-color-scheme: dark){body{color:white;background:#444}a:link{color:#5bf}a:visited{color:#ccf}}
+:root {
+    --color-primary: #ffffff;
+    --color-secondary: rgb(0, 0, 0);
+}
+
+body{
+    max-width:650px;
+    margin:40px auto;
+    padding:0 10px;
+    font:18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";background:#444;
+    color:white;
+    text-align: center;
+}
+
+body.dark-theme{
+    background:var(--color-primary);
+    color:var(--color-secondary);
+}
+.dark-mode{
+    display:flex;
+    justify-content:flex-end;
+    align-items:center;
+}
+
+#btn{
+    text-align: center;
+    width: 20%;
+    height: 30px;
+    cursor:pointer;
+    border-radius: 4px;
+    background: var(--color-primary);
+    color: var(--color-secondary);
+    font-size: 18px;
+    font-weight: bold;
+    transition: all 0.3s;
+}
+
+h1,h2,h3{
+    line-height:1.2;
+}
+
+a:link{
+    color:#5bf;
+    font-weight: 700;
+}
+
+a:visited{
+    color:#ccf;
+}
 
 #negrito{
     font-weight: bold;
