--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -9,30 +9,32 @@
     --color-secondary: rgb(0, 0, 0);
 }
 
-body{
-    max-width:650px;
-    margin:40px auto;
-    padding:0 10px;
-    font:18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";background:#444;
-    color:white;
+body {
+    max-width: 650px;
+    margin: 40px auto;
+    padding: 0 10px;
+    font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    background: #444;
+    color: white;
     text-align: center;
 }
 
-body.dark-theme{
-    background:var(--color-primary);
-    color:var(--color-secondary);
-}
-.dark-mode{
-    display:flex;
-    justify-content:flex-end;
-    align-items:center;
+body.dark-theme {
+    background: var(--color-primary);
+    color: var(--color-secondary);
 }
 
-#btn{
+.dark-mode {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+#btn {
     text-align: center;
     width: 20%;
     height: 30px;
-    cursor:pointer;
+    cursor: pointer;
     border-radius: 4px;
     background: var(--color-primary);
     color: var(--color-secondary);
@@ -41,19 +43,21 @@ body.dark-theme{
     transition: all 0.3s;
 }
 
-h1,h2,h3{
-    line-height:1.2;
+h1,
+h2,
+h3 {
+    line-height: 1.2;
 }
 
-a:link{
-    color:#5bf;
+a:link {
+    color: #5bf;
     font-weight: 700;
 }
 
-a:visited{
-    color:#ccf;
+a:visited {
+    color: #ccf;
 }
 
-#negrito{
+#negrito {
     font-weight: bold;
 }
